force-app/main/default/objects/Case_Ext_MRO__c.object
<CustomObject>
    <description>Additional case fields for the Monash Research Office</description>
    <fields>
        <fullName>Account_Address__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Store account address.</description>
        <label>Account Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Account Name for the opportunity.</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Fellowship</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Tender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseNumberHyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+  MRO_Case__c,  Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <formula>MRO_Case__r.Case_Owner_String__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <formula>TEXT(MRO_Case__r.Category_Level_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <description>Defines the complexity of the Project.</description>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Complicated</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_DUNS_Number__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Stores Account DUNS Numbers</description>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Enquiry_Opened__c</fullName>
        <formula>MRO_Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_Ref__c</fullName>
        <label>Funder Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <label>Funding Opportunity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Clinical Trial</fullName>
                </value>
                <value>
                    <fullName>Internal Grant</fullName>
                </value>
                <value>
                    <fullName>Medical - International</fullName>
                </value>
                <value>
                    <fullName>Medical - MRFF</fullName>
                </value>
                <value>
                    <fullName>Medical - NHMRC</fullName>
                </value>
                <value>
                    <fullName>Medical - Other Funder</fullName>
                </value>
                <value>
                    <fullName>Non-Medical - ARC</fullName>
                </value>
                <value>
                    <fullName>Non-Medical - International</fullName>
                </value>
                <value>
                    <fullName>Non-Medical - Other Funder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Collaborator__c</fullName>
        <label>Lead Collaborator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>External Led</fullName>
                </value>
                <value>
                    <fullName>Monash Led</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRO_Case__c</fullName>
        <label>MRO Enquiry</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Monash Research Office</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Extension - MRO</relationshipLabel>
        <relationshipName>Case_Extension_MRO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_of_Collaborators__c</fullName>
        <label>No of Collaborators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OGC_Ref__c</fullName>
        <description>OGC Ref</description>
        <label>OGC Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Funder for Pure Application &amp; Award</description>
        <inlineHelpText>Primary Funder for Pure Application &amp; Award</inlineHelpText>
        <label>Primary Funder</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Primary funder needs to be a UniCRM account that is an External Organisation or a Monash Organisation</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Organisation, Monash Organisation, Faculty</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Extension - MRO</relationshipLabel>
        <relationshipName>Case_Extension_MRO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pure_Application_Id__c</fullName>
        <description>Pure Application Id</description>
        <label>PURE Application Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pure_Award_Id__c</fullName>
        <label>PURE Award Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pure_Project_Id__c</fullName>
        <label>PURE Project Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(MRO_Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Project_Id__c</fullName>
        <description>Stores Project Id from Pure.</description>
        <label>Sub Project Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Extension - MRO</label>
    <listViews>
        <fullName>Extensions_ARC</fullName>
        <columns>NAME</columns>
        <columns>Pure_Application_Id__c</columns>
        <columns>Primary_Funder__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Funder__c</field>
            <operation>equals</operation>
            <value>Australian Research Council [ARC]</value>
        </filters>
        <label>Extensions - ARC</label>
        <sharedTo>
            <group>MRO_Monash_Research_Office</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MRO-{00000000}</displayFormat>
        <label>MRO Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Extension - MRO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PUREApplicationID_NumberOnly</fullName>
        <active>true</active>
        <description>Numbers only, no spaces or special characters.</description>
        <errorConditionFormula>!REGEX(Pure_Application_Id__c,&quot;[0-9]*&quot;)</errorConditionFormula>
        <errorDisplayField>Pure_Application_Id__c</errorDisplayField>
        <errorMessage>Please enter a valid PURE Application ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PUREAwardID_NumberOnly</fullName>
        <active>true</active>
        <description>Numbers only, no spaces or special characters.</description>
        <errorConditionFormula>!REGEX(Pure_Award_Id__c,&quot;[0-9]*&quot;)</errorConditionFormula>
        <errorDisplayField>Pure_Award_Id__c</errorDisplayField>
        <errorMessage>Please enter a valid PURE Award ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PUREProjectID_NumberOnly</fullName>
        <active>true</active>
        <description>Numbers only, no spaces or special characters.</description>
        <errorConditionFormula>!REGEX(Pure_Project_Id__c,&quot;[0-9]*&quot;)</errorConditionFormula>
        <errorDisplayField>Pure_Project_Id__c</errorDisplayField>
        <errorMessage>Please enter a valid PURE Project ID.</errorMessage>
    </validationRules>
</CustomObject>